--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,11 +18,12 @@ android {
     }
     defaultConfig {
         applicationId "ee.taltech.iti0202.gui.game"
-        minSdkVersion 9
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -105,7 +106,7 @@ eclipse {
     }
 
     classpath {
-        plusConfigurations += [ project.configurations.compile ]        
+        plusConfigurations += [ project.configurations.implementation ]
         containers 'com.android.ide.eclipse.adt.ANDROID_FRAMEWORK', 'com.android.ide.eclipse.adt.LIBRARIES'       
     }
 
@@ -123,8 +124,8 @@ eclipse {
 // sets up the Android Idea project, using the old Ant based build.
 idea {
     module {
-        sourceDirs += file("src");
-        scopes = [ COMPILE: [plus:[project.configurations.compile]]]
+        sourceDirs += file("src")
+        scopes = [ IMPLEMENTATION: [plus:[project.configurations.implementation]]]
 
         iml {
             withXml {
