--- a/android/assets/settings/settings.json
+++ b/android/assets/settings/settings.json
@@ -1,1 +1,1 @@
-{"MOVE_LEFT":0,"MOVE_RIGHT":1,"CHANGE_DIMENSION":3,"JUMP":2,"SHOOT":5,"MENU":4,"NUM_KEYS":7,"ESC":6}
+{"MOVE_LEFT":"A","MOVE_RIGHT":"D","CHANGE_DIMENSION":"S","JUMP":"Space","SHOOT":"MOUSE1","MENU":"Menu","ESC":"Escape"}
