--- a/android/assets/settings/settings.json
+++ b/android/assets/settings/settings.json
@@ -1,1 +1,1 @@
-{"MOVE_LEFT":29,"MOVE_RIGHT":32,"CHANGE_DIMENSION":47,"JUMP":62,"SHOOT":0,"MENU":82,"ESC":131,"ENABLE_DEV_MAPS":false,"SHOW_FPS":true,"MAX_FPS":300,"ENABLE_VSYNC":true}
+{"MOVE_LEFT":29,"MOVE_RIGHT":32,"CHANGE_DIMENSION":47,"JUMP":62,"SHOOT":0,"MENU":82,"ESC":131,"ENABLE_DEV_MAPS":false,"SHOW_FPS":true,"MAX_FPS":300,"ENABLE_VSYNC":false}
