--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ allprojects {
         mavenLocal()
         mavenCentral()
         google()
-        maven { url 'https://jitpack.io' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
@@ -48,9 +47,6 @@ project(":desktop") {
 
     dependencies {
         implementation project(":core")
-
-        implementation 'com.github.envomp:spriter:1.0.1'
-
         implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
@@ -70,9 +66,6 @@ project(":android") {
 
     dependencies {
         implementation project(":core")
-
-        implementation 'com.github.envomp:spriter:1.0.1'
-
         implementation "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
@@ -114,9 +107,6 @@ project(":ios") {
 
     dependencies {
         implementation project(":core")
-
-        implementation 'com.github.envomp:spriter:1.0.1'
-
         implementation "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
         implementation "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
         implementation "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
@@ -134,9 +124,7 @@ project(":core") {
 
 
     dependencies {
-
-        implementation 'com.github.envomp:spriter:1.0.1'
-
+        compile files('java-json.jar')
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
@@ -157,9 +145,6 @@ project(":ios-moe") {
 
     dependencies {
         implementation project(":core")
-
-        implementation 'com.github.envomp:spriter:1.0.1'
-
         implementation "com.badlogicgames.gdx:gdx-backend-moe:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
