--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
-    
 
     repositories {
         mavenLocal()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://plugins.gradle.org/m2/" }
         jcenter()
         google()
     }
@@ -13,7 +13,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.5'
         classpath 'org.multi-os-engine:moe-gradle:1.4.0'
-
+        classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
     }
 }
 
@@ -21,6 +21,7 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
     apply plugin: 'maven'
+    apply plugin: 'com.moowork.node'
 
     version = '1.0'
     ext {
