--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,10 @@ project(":core") {
 
 
     dependencies {
+        compile ('io.socket:socket.io-client:1.0.0') {
+            // excluding org.json which is provided by Android
+            exclude group: 'org.json', module: 'json'
+        }
         compile files('java-json.jar')
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
