--- a/core/src/knn/classifier/package.json
+++ b/core/src/knn/classifier/package.json
@@ -4,9 +4,13 @@
   "license": "",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "@tensorflow-models/coco-ssd": "^1.0.0",
     "@tensorflow-models/knn-classifier": "^0.2.2",
     "@tensorflow-models/mobilenet": "^0.2.2",
-    "@tensorflow/tfjs": "^0.13.0"
+    "@tensorflow-models/posenet": "^1.0.1",
+    "@tensorflow-models/speech-commands": "^0.3.5",
+    "@tensorflow/tfjs": "^0.13.0",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "budo main.js:dist/build.js --live --host localhost",
