--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allprojects {
         aiVersion = '1.8.0'
     }
 
+
     repositories {
         mavenLocal()
         mavenCentral()
@@ -127,10 +128,12 @@ project(":core") {
     apply plugin: "java"
 
     dependencies {
-        compile ('io.socket:socket.io-client:1.0.0') {
+        implementation ('io.socket:socket.io-client:1.0.0') {
             // excluding org.json which is provided by Android
             exclude group: 'org.json', module: 'json'
         }
+        compileOnly 'org.projectlombok:lombok:1.18.6'
+        annotationProcessor 'org.projectlombok:lombok:1.18.6'
         compile files('java-json.jar')
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
