--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ project(":desktop") {
         implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
         implementation "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
         implementation 'com.google.code.gson:gson:2.8.5'
+        implementation 'org.json:json:20190722'
     }
 }
 
@@ -127,7 +128,6 @@ project(":core") {
             // excluding org.json which is provided by Android
             exclude group: 'org.json', module: 'json'
         }
-        compile files('java-json.jar')
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
@@ -138,7 +138,7 @@ project(":core") {
         implementation "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         implementation 'com.google.code.gson:gson:2.8.5'
         implementation "com.esotericsoftware:kryonet:2.22.0-RC1"
-
+        implementation 'org.json:json:20190722'
     }
 }
 
