--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,10 @@ allprojects {
     apply plugin: 'com.moowork.node'
     version = '2.1'
     ext {
-        appName = "iti0202-2019-gui"
-        gdxVersion = '1.9.10'
-        roboVMVersion = '2.3.7'
-        box2DLightsVersion = '1.5'
+        appName = "LonePlayer"
+        gdxVersion = '1.9.9'
+        roboVMVersion = '2.3.8'
+        box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
     }
