--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -3,7 +3,10 @@ apply plugin: "java"
 sourceSets.main.java.srcDirs = ["src/"]
 
 project.ext.mainClassName = "ee.taltech.iti0202.gui.game.desktop.DesktopLauncher"
-project.ext.assetsDir = new File("../android/assets")
+project.ext.assetsDir = new File("../android/")
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 
 apply plugin: 'gradle-one-jar'
