--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,13 @@ buildscript {
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://plugins.gradle.org/m2/" }
         jcenter()
         google()
     }
     dependencies {
+        classpath 'org.wisepersist:gwt-gradle-plugin:1.0.9'
         classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.5'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.8'
         classpath 'org.multi-os-engine:moe-gradle:1.4.0'
         classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
     }
@@ -25,7 +25,7 @@ allprojects {
     version = '2.1'
     ext {
         appName = "LonePlayer"
-        gdxVersion = '1.9.9'
+        gdxVersion = '1.9.10'
         roboVMVersion = '2.3.8'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
@@ -102,7 +102,7 @@ project(":android") {
 }
 
 project(":ios") {
-    apply plugin: "java"
+    apply plugin: "java-library"
     apply plugin: "robovm"
 
 
@@ -121,7 +121,7 @@ project(":ios") {
 }
 
 project(":core") {
-    apply plugin: "java"
+    apply plugin: "java-library"
 
     dependencies {
         compile('io.socket:socket.io-client:1.0.0') {
